Bug 530854 - Move away of methods deprecated in Java 9
Number constructors and Class.newInstance. Some small cleanups
(generification, lambdas) in surrounding code.

Change-Id: I62bab4119a98a7b5df560b8c9247f79fdfa8da03
Signed-off-by: Alexander Kurtakov <akurtako@redhat.com>