@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2007 IBM Corporation and others.
+ * Copyright (c) 2000, 2018 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -29,12 +29,6 @@ public class SelectionPropertyTester extends PropertyTester {
 		// TODO Auto-generated constructor stub
 	}
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.eclipse.core.expressions.IPropertyTester#test(java.lang.Object,
-	 *      java.lang.String, java.lang.Object[], java.lang.Object)
-	 */
 	public boolean test(Object receiver, String property, Object[] args,
 			Object expectedValue) {
 		
@@ -62,8 +56,8 @@ public class SelectionPropertyTester extends PropertyTester {
 
 		Object invoke;
 		try {
-			Class clazz = Class.forName((String) args[0]);
-			Object instance = clazz.newInstance();
+			Class<?> clazz = Class.forName((String) args[0]);
+			Object instance = clazz.getDeclaredConstructor().newInstance();
 			
 //			Field fld = clazz.getDeclaredField(SELECTION_FIELDNAME);
 //			fld.set(instance, (ISelection) receiver);
